feat vpk addoninfo信息的读取与显示

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -166,6 +166,27 @@
                 <img id="detail-preview-image" class="preview-image" alt="预览图" />
               </div>
             </div>
+            <div class="detail-section" id="vpk-info-section">
+              <h4>VPK信息</h4>
+              <div class="detail-grid">
+                <div class="detail-item">
+                  <label>标题:</label>
+                  <span id="detail-vpk-title"></span>
+                </div>
+                <div class="detail-item" id="detail-vpk-author-item">
+                  <label>作者:</label>
+                  <span id="detail-vpk-author"></span>
+                </div>
+                <div class="detail-item" id="detail-vpk-version-item">
+                  <label>版本:</label>
+                  <span id="detail-vpk-version"></span>
+                </div>
+                <div class="detail-item-full" id="detail-vpk-desc-item">
+                  <label>描述:</label>
+                  <span id="detail-vpk-desc"></span>
+                </div>
+              </div>
+            </div>
             <div class="detail-section" id="map-info-section">
               <h4>地图信息</h4>
               <div class="map-info-content">
