--- a/frontend/index.html
+++ b/frontend/index.html
@@ -35,6 +35,14 @@
               </svg>
               <span>启动 L4D2</span>
             </button>
+            <button id="workshop-btn" class="btn btn-primary" title="创意工坊下载">
+              <svg class="icon-svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path>
+                <polyline points="7 10 12 15 17 10"></polyline>
+                <line x1="12" y1="15" x2="12" y2="3"></line>
+              </svg>
+              <span>创意工坊</span>
+            </button>
             <button id="info-btn" class="btn-icon" title="关于">
               <span class="icon">🛈</span>
             </button>
@@ -236,6 +244,95 @@
           </div>
         </div>
       </div>
+      <!-- 创意工坊下载模态框 -->
+      <div id="workshop-modal" class="modal hidden">
+        <div class="modal-content workshop-modal-content">
+          <div class="modal-header">
+            <h2>创意工坊下载</h2>
+            <button id="close-workshop-modal-btn" class="close-btn">&times;</button>
+          </div>
+          <div class="modal-body">
+            <div class="input-group">
+              <label for="workshop-url" style="margin-bottom: 8px; display: block; font-weight: 500;">创意工坊链接</label>
+              <div class="url-input-container">
+                <input type="text" id="workshop-url" placeholder="粘贴 Steam 创意工坊链接..." />
+                <button id="check-workshop-btn" class="btn btn-primary">解析</button>
+              </div>
+            </div>
+
+            <div class="input-group" style="margin-top: 15px;">
+              <label for="download-url" style="margin-bottom: 8px; display: block; font-weight: 500;">下载链接</label>
+              <div class="url-input-container">
+                <input type="text" id="download-url" placeholder="解析后自动填充，或手动输入直链..." />
+                <button id="copy-url-btn" class="btn btn-secondary">复制</button>
+                <button id="download-workshop-btn" class="btn btn-success">下载</button>
+              </div>
+            </div>
+
+            <div id="workshop-result" class="workshop-result hidden" style="margin-top: 20px;">
+              <div class="workshop-info" style="display: flex; gap: 20px; margin-bottom: 20px;">
+                <img id="workshop-preview" src="" alt="Preview" class="workshop-preview" style="max-width: 200px; max-height: 200px; object-fit: cover; border-radius: 4px;" />
+                <div class="workshop-details">
+                  <h3 id="workshop-title" style="margin-top: 0;"></h3>
+                  <p><strong>文件名:</strong> <span id="workshop-filename"></span></p>
+                  <p><strong>大小:</strong> <span id="workshop-filesize"></span></p>
+                  <p id="workshop-creator-container"><strong>作者:</strong> <span id="workshop-creator"></span></p>
+                </div>
+              </div>
+            </div>
+
+            <div class="workshop-actions" style="text-align: right; margin-top: 20px; display: none;">
+              <!-- Button moved to input group -->
+            </div>
+
+            <div class="task-list-container" style="margin-top: 30px; border-top: 1px solid #eee; padding-top: 20px;">
+              <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 10px;">
+                <h3>下载任务队列</h3>
+                <button id="clear-completed-tasks-btn" class="btn btn-sm btn-outline">清理已完成</button>
+              </div>
+              <div id="download-tasks-list" class="download-tasks-list" style="max-height: 300px; overflow-y: auto;">
+                <!-- 任务列表项将动态插入这里 -->
+                <div class="empty-tasks" style="text-align: center; color: #888; padding: 20px;">暂无下载任务</div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- 确认对话框 -->
+      <div id="confirm-modal" class="modal hidden">
+        <div class="modal-content confirm-modal-content">
+          <div class="modal-header">
+            <h2 id="confirm-title">确认</h2>
+            <button id="close-confirm-modal-btn" class="close-btn">&times;</button>
+          </div>
+          <div class="modal-body">
+            <p id="confirm-message" class="confirm-message"></p>
+          </div>
+          <div class="modal-footer">
+            <button id="confirm-cancel-btn" class="btn btn-secondary">取消</button>
+            <button id="confirm-ok-btn" class="btn btn-primary">确定</button>
+          </div>
+        </div>
+      </div>
+
+      <!-- 退出确认对话框 -->
+      <div id="exit-confirm-modal" class="modal hidden">
+        <div class="modal-content confirm-modal-content">
+          <div class="modal-header">
+            <h2>确认退出</h2>
+            <button id="close-exit-modal-btn" class="close-btn">&times;</button>
+          </div>
+          <div class="modal-body">
+            <p>当前有正在进行的下载任务，退出将导致任务中断。<br>确定要退出吗？</p>
+          </div>
+          <div class="modal-footer">
+            <button id="exit-cancel-btn" class="btn btn-secondary">取消</button>
+            <button id="exit-confirm-btn" class="btn btn-danger">退出</button>
+          </div>
+        </div>
+      </div>
+
     </div>
     <script src="./src/main.js?v=1.6" type="module"></script>
   </body>
