refactor 优化服务器弹框显示

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -448,7 +448,7 @@
                 <span style="font-size: 0.85rem; color: var(--text-tertiary);">数值越大，排序越靠前</span>
               </div>
             </div>
-            <div class="modal-footer" style="display: flex; justify-content: flex-end; gap: 10px; padding-top: 10px;">
+            <div class="modal-footer" style="background: transparent; border-top: none; padding: 0; padding-top: 10px; justify-content: flex-end;">
               <button id="cancel-server-form-btn" class="btn btn-secondary" style="padding: 8px 20px;">取消</button>
               <button id="save-server-form-btn" class="btn btn-primary" style="padding: 8px 20px;">保存</button>
             </div>
