feat 添加升级不再提醒功能

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -231,6 +231,7 @@
             </div>
           </div>
           <div class="modal-footer" id="update-modal-footer">
+            <button id="ignore-update-btn" class="btn btn-outline-danger" style="margin-right: auto;">不再提醒</button>
             <button id="cancel-update-btn" class="btn btn-secondary">稍后提醒</button>
             <button id="confirm-update-btn" class="btn btn-primary">立即更新</button>
           </div>
