feat 增加批量导出功能，自动压缩为zip文件，方便传递文件

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -155,6 +155,9 @@
                     <button id="unhide-selected-btn" class="dropdown-item">
                         <span class="btn-icon">👁️</span> 取消隐藏
                     </button>
+                    <button id="export-zip-selected-btn" class="dropdown-item">
+                        <span class="btn-icon">📦</span> 导出ZIP
+                    </button>
                     <button id="delete-selected-btn" class="dropdown-item delete-btn">
                         <span class="btn-icon">🗑️</span> 删除选中
                     </button>
