feat 工坊物品详情浏览增加预览图，预览图全尺寸浏览功能

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1110,5 +1110,10 @@
         </div>
       </div>
     </div>
+    <!-- Image Preview Modal -->
+    <div id="image-preview-modal" class="image-modal">
+        <span class="image-modal-close">&times;</span>
+        <img class="image-modal-content" id="full-image">
+    </div>
   </body>
 </html>
