--- a/frontend/index.html
+++ b/frontend/index.html
@@ -173,6 +173,36 @@
               >
                 <span class="icon">⚠</span> 冲突检测
               </button>
+              <button
+                id="mod-rotation-btn"
+                class="btn btn-small btn-outline"
+                title="Mod随机轮换"
+              >
+                <span class="icon">
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="16"
+                    height="16"
+                    viewBox="0 0 24 24"
+                    fill="none"
+                    stroke="currentColor"
+                    stroke-width="2"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    class="icon-svg"
+                  >
+                    <path
+                      d="M21 12a9 9 0 0 0-9-9 9.75 9.75 0 0 0-6.74 2.74L3 8"
+                    ></path>
+                    <path d="M3 3v5h5"></path>
+                    <path
+                      d="M3 12a9 9 0 0 0 9 9 9.75 9.75 0 0 0 6.74-2.74L21 16"
+                    ></path>
+                    <path d="M16 21h5v-5"></path>
+                  </svg>
+                </span>
+                轮换已禁用
+              </button>
             </div>
           </div>
 
