--- a/frontend/index.html
+++ b/frontend/index.html
@@ -324,6 +324,29 @@
                     </span>
                     更新时间排序
                   </button>
+                  <button id="sort-load-order-btn" class="dropdown-item">
+                    <span class="btn-icon">
+                      <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="16"
+                        height="16"
+                        viewBox="0 0 24 24"
+                        fill="none"
+                        stroke="currentColor"
+                        stroke-width="2"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                      >
+                        <line x1="10" y1="6" x2="21" y2="6"></line>
+                        <line x1="10" y1="12" x2="21" y2="12"></line>
+                        <line x1="10" y1="18" x2="21" y2="18"></line>
+                        <path d="M4 6h1v4"></path>
+                        <path d="M4 10h2"></path>
+                        <path d="M6 18H4c0-1 2-2 2-3s-1-1.5-2-1"></path>
+                      </svg>
+                    </span>
+                    加载顺序排序
+                  </button>
                 </div>
               </div>
             </div>
